@@ -10,6 +10,7 @@ Derived from sspec_v1.0.sh by Aldo Zollo and Claudio Satriano
 v0.9 -
 	- Traces are filtered before computing S/N ratio
 	- Trace clipping detection
+	- Traces are always plotted, even if no inversion is performed
 	- Use json format for traceid correction file
 	- Code cleaning and optimization:
 		- Switch from optparse (deprecated) to argparse
